Navigation de Home + CCréation page d'accueil

--- a/Spotival/Spotival.csproj
+++ b/Spotival/Spotival.csproj
@@ -70,6 +70,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="visuals\HomeWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="visuals\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -77,6 +81,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="visuals\HomeWindow.xaml.cs">
+      <DependentUpon>HomeWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="visuals\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -140,6 +147,12 @@
     <Resource Include="resources\close.png" />
     <Resource Include="resources\maximize.png" />
     <Resource Include="resources\minimize.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="resources\deezer_color.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="resources\vinyle.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
