--- a/Spotival/packages.config
+++ b/Spotival/packages.config
@@ -3,4 +3,5 @@
   <package id="Dapper" version="2.0.78" targetFramework="net472" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
   <package id="MaterialSkin.Updated" version="0.2.2" targetFramework="net472" />
+  <package id="taglib-sharp-netstandard2.0" version="2.1.0" targetFramework="net472" />
 </packages>
