--- a/Spotival/Spotival.csproj
+++ b/Spotival/Spotival.csproj
@@ -211,12 +211,6 @@
     <Resource Include="resources\player_song.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="resources\plus_icon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="resources\fleche_droite.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="resources\album_2.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -281,6 +275,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="resources\parcourir.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="resources\plus_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="resources\entrer.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
